--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
+@font-face {
+  font-family: "Viaoda Libre";
+  src: url("./ViaodaLibre-Regular.ttf");
+}
+
 .hello {
+  font-family: "Viaoda Libre", cursive;
   color: red;
   background: url("./icon.png") center/cover no-repeat;
 }
